main.css
/* DEFAULT */

.main {
  max-width: 600px;
  margin: auto;
}

.header {
  text-align: center;

  margin-top: 30px;
  margin-bottom: 130px;
}

.gallery {
  display: flex;
}

.image {
  width: 100%;
}

.display {
    min-width: 300px;
}


/* LARGE */

@media (min-width: 800px) {

  .hidden {
    visibility: hidden;
  }
}

